# bayesreg

./: .gitignore  .gitmodules  Bayesian_fitting.tex  Cost.py  Estimator.py  LICENSE  Linear_Model.py  README.md  derivatives.py  linear_regression.py  make_pdf.sh  mh_tests.py  pyproject.toml  readme.md  rmse_test_polyfit.py  setup.py  straightline_demo.py  test_linear_model.py  test_polyfit_OLS.py  test_regularization.py
bayesian_linear_regression/: Estimator.py  __init__.py  cost.py  data.py  derivatives.py  estimator.py  fitting.py  likelihood.py  model.py  noise.py  optimizer.py  posterior.py  prior.py  utils.py
bayesreg/: __init__.py  estimator.py  likelihood.py  model.py  noise.py  optimizer.py  posterior.py  prior.py  utils.py
documentation/: bayesian_inference.tex  bayesian_inference_gaussian.tex
examples/: SamplingFromPosterior.ipynb  test_derivatives.py  test_gradient_descent.py  test_lad_optimizer.py  test_lsq_estimator.py  test_map_jeffreys.py  test_mixin.py  test_noinstallation.py  test_polynomial.py  test_ridge_estimator.py  test_straight_line.py
notebooks/: SamplingFromPosterior.ipynb
scripts/: lsq_estimator.py  map_jeffreys.py  pymc_explore.ipynb  ridge_estimator.py  straight_line.py  test_noinstallation.py
tests/: mixin_test.py  test_derivatives.py  test_gradient_descent.py  test_lad_optimizer.py  test_linear_model.py  test_lsq_estimator.py  test_map_jeffreys.py  test_noinstallation.py  test_polynomial.py  test_polynomial_mh.py  test_precision_params.py  test_ridge_estimator.py  test_straight_line.py
