[tool.poetry]
name = "bayesreg"
version = "0.1.0"
description = "Learning basics of bayesian regression methods"
authors = ["ShantanuK <shantanukodgirwar@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
scipy = "^1.11.1"
scikit-learn = "^1.3.0"
pymc = "^5.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
